--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="glass-panel">
         <div class="question-content">
           <h2>Question 1/4</h2>
-          <img src="./scouts.png" alt="Scout and Guide" class="question-image" />
+          <img src="./question_1_scouts.png" alt="Scout and Guide" class="question-image" />
           <p class="question-text">what did you catch me staring at in scout and guide trip</p>
           <div class="input-group-vertical">
             <input type="text" id="q1-input" class="styled-input" placeholder="Type your answer..." autocomplete="off">
@@ -68,7 +68,7 @@
       <div class="glass-panel">
         <div class="question-content">
           <h2>Question 2/4</h2>
-          <img src="./date.png" alt="First Date" class="question-image" />
+          <img src="./question_2_date.png" alt="First Date" class="question-image" />
           <p class="question-text">when did we go on our first official date?</p>
           <div class="input-group-vertical">
             <input type="date" id="q2-input" class="styled-input">
@@ -88,7 +88,7 @@
       <div class="glass-panel">
         <div class="question-content">
           <h2>Question 3/4</h2>
-          <img src="./class.png" alt="First I Love You" class="question-image" />
+          <img src="./question_3_class.png" alt="First I Love You" class="question-image" />
           <p class="question-text">when did we say I love you for the very first time</p>
           <div class="input-group-vertical">
             <input type="date" id="q3-input" class="styled-input">
@@ -108,7 +108,7 @@
       <div class="glass-panel">
         <div class="question-content">
           <h2>Question 4/4</h2>
-          <img src="./Propose.png" alt="Who do I Love" class="question-image" />
+          <img src="./question_4_propose.png" alt="Who do I Love" class="question-image" />
           <p class="question-text">who do I love the most?</p>
           <div class="input-group-vertical">
             <input type="text" id="q4-input" class="styled-input" placeholder="Type your answer..." autocomplete="off">
@@ -126,7 +126,7 @@
     <div id="proposal-overlay" class="hidden">
       <div class="glass-panel">
         <h1>One Final Question...</h1>
-        <img src="./old.png" alt="Grow Old With Me" class="question-image" />
+        <img src="./proposal_old.png" alt="Grow Old With Me" class="question-image" />
         <p class="quote-text" style="font-style: italic; margin-bottom: 20px;">"Grow old with me?"</p>
         <p class="subtitle" id="proposal-text">Will you be my valentine?</p>
 
