--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     };
   </script>
   <div id="app">
+    <audio id="bg-music" loop>
+      <source
+        src="https://cdn.pixabay.com/download/audio/2022/10/25/audio_1080d85348.mp3?filename=romantic-piano-1234.mp3"
+        type="audio/mpeg">
+    </audio>
+
     <div id="audio-control" title="Play Music">
       <svg id="audio-icon" viewBox="0 0 24 24">
         <path
