Add I Love You intro and fix gallery movement mechanics

--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
       </div>
     </div>
 
+    <!-- Intro Animation Overlay -->
+    <div id="love-overlay" class="hidden">
+      <div class="love-content">
+        <h1 class="love-title">I Love You</h1>
+        <div class="floating-heart-icon">❤️</div>
+        <div class="floating-heart-icon" style="top: 20%; left: 20%; animation-delay: 0.5s;">💖</div>
+        <div class="floating-heart-icon" style="top: 70%; left: 80%; animation-delay: 1s;">💘</div>
+        <div class="floating-heart-icon" style="top: 30%; right: 20%; animation-delay: 1.5s;">💝</div>
+      </div>
+    </div>
+
     <!-- Gallery UI (Scroll Helper & labels) -->
     <div id="gallery-ui" class="hidden">
       <!-- Old scroll indicator removed/hidden -->
