--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   </script>
   <div id="app">
     <audio id="bg-music" loop>
-      <source
-        src="https://cdn.pixabay.com/download/audio/2022/10/25/audio_1080d85348.mp3?filename=romantic-piano-1234.mp3"
-        type="audio/mpeg">
+      <source src="./Raabta.mp3" type="audio/mpeg">
     </audio>
 
     <div id="audio-control" title="Play Music">
@@ -106,7 +104,7 @@
           <p class="question-text">when did we say I love you for the very first time</p>
           <div class="input-group-vertical">
             <input type="date" id="q3-input" class="styled-input">
-            <button class="submit-question-btn" data-input="q3-input" data-correct-val="2015-10-04">Submit</button>
+            <button class="submit-question-btn" data-input="q3-input" data-correct-val="2014-10-04">Submit</button>
             <p class="error-msg hidden">Try again!</p>
           </div>
         </div>
