Fix Audio 404: Rename Raabta.mp3 to lowercase to match git index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </script>
   <div id="app">
     <audio id="bg-music" loop>
-      <source src="./Raabta.mp3" type="audio/mpeg">
+      <source src="./raabta.mp3" type="audio/mpeg">
     </audio>
 
     <div id="audio-control" title="Play Music">
