--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
     </div>
 
     <div id="scene-container"></div>
+    <div class="heart-rain-container" id="heart-rain"></div>
+
+    <!-- Auth/Login Overlay -->
   </div>
   <script type="module" src="/main.js"></script>
 </body>
